	(twittering-ensure-ca-cert): explicitly specify coding-system.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-read-from-encrypted-file): likewise.
	(twittering-write-and-encrypt): likewise.
	(twittering-load-icon-properties): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.
	(twittering-status-not-blank-p): likewise.

2011-04-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix headers for a proxy.
	(twittering-make-connection-info): extract proxy information from
	`connection-info' instead of directly referring to
	`twittering-http-proxy-user', `twittering-http-proxy-password',
	etc.
	(twittering-send-http-request-native): generate the
	"Proxy-Authorization" header correctly and give the absolute URI
	as the request URI when the connection is peformed via a proxy.
	(twittering-send-http-request-urllib): add "Proxy-Authorization"
	header if necessary.
	(twittering-http-application-headers): do not add headers related
	to a proxy. They are added in functions for each connection
	method.

	* twittering-mode.el: "U" pushes a URI of a tweet on text without
	a uri property.
	(twittering-push-uri-onto-kill-ring): push a URI of a tweet unless
	the currently pointed character has a uri property.

	* twittering-mode.el: `twittering-direct-message' always posts a
	tweet with direct message API.
	(twittering-direct-message): always post a tweet with direct
	message API.

	* twittering-mode.el: Introduce "edit skeleton".
	(twittering-edit-skeleton-footer): new variable.
	(twittering-edit-skeleton-footer-history): new variable.
	(twittering-edit-skeleton-alist): new variable.
	(twittering-switch-edit-skeleton): new function.
	(twittering-edit-skeleton-change-footer): new function.
	(twittering-edit-skeleton-insert-base): new function.
	(twittering-edit-skeleton-insert): new function.
	(twittering-update-status-from-pop-up-buffer): insert the current
	edit skeleton before editing a tweet.